--- a/app/views/gifts/index.html.erb
+++ b/app/views/gifts/index.html.erb
@@ -3,19 +3,19 @@
 		<h1 class="col-full text-center page-title">Gift Registry</h1>
 		<p class="col-full text-center page-message">(click to reserve)</p>
 	</div>
-	<div class="container-center gifts">
+	<div class="container-center gifts click-gifts">
 		<%= react_component 'Gifts', { data: @gifts, current_user: @user_id } %>
 	</div>
 
 	<div class="container-center gifts">
 		<h3>Other Ideas</h3>
 		<div class="no-click-gift gift">
-			<div class="form-inline no-click">Farmers Vouchers</div>
-			<div class="form-inline no-click">Petrol vouchers for our honeymoon</div>
-			<div class="form-inline no-click">A copy of your favourite book</div>
-			<div class="form-inline no-click">A framed picture of your face for our walls</div>
-			<div class="form-inline no-click">Your favourite luxury cooking ingredient</div>
-			<div class="form-inline no-click">Your favourite wine or beer</div>
+			<div class="form-inline no-click"><span>Farmers Vouchers</span></div>
+			<div class="form-inline no-click"><span>Petrol vouchers for our honeymoon</span></div>
+			<div class="form-inline no-click"><span>A copy of your favourite book</span></div>
+			<div class="form-inline no-click"><span>A framed picture of your face for our walls</span></div>
+			<div class="form-inline no-click"><span>Your favourite luxury cooking ingredient</span></div>
+			<div class="form-inline no-click"><span>Your favourite wine or beer</span></div>
 		</div>
 	</div>
 </div>
