add message to colouring in

--- a/app/views/pages/tips_and_tricks.html.erb
+++ b/app/views/pages/tips_and_tricks.html.erb
@@ -31,12 +31,13 @@
 		</div>
 		<div class="col-padding">
 			<h2 class="text-center list-highlight-title">Colouring In</h2>
-<!-- 			<p>The prizes are grand and the competition is fierce! We know you are more excited to enter the Bicnic Colouring In Competition than you are to see us married. We understand. This is important.
-To help you crush those competitive Collins, beat the brilliant Bichans, nullify the nifty Nicholai, and to surpass the skillful Speirs, we have provided some handy links below:</p> -->
+			<p class="small">The prizes are grand and the competition is fierce! We know you are more excited to enter the Bicnic Colouring In Competition than you are to see us married. We understand. This is important.
+To help you crush those competitive Collins, beat the brilliant Bichans, nullify the nifty Nicholai, and to surpass the skillful Speirs, we have provided some handy links below:</p>
 			<ul class="list list-highlight ">
 				<li class="list-item"><a href="https://www.youtube.com/watch?v=c_FcWFIXusA" target="_blank">How to shade</a></li>
 				<li class="list-item"><a href="https://www.buzzfeed.com/ailbhemalone/colouring-in-to-the-next-level?utm_term=.fiGP7Ez6y#.gqvyLWZBP" target="_blank">Bring Your Colouring To The Next Level</a></li>
-			</ul>
+			</ul>			
+
 		</div>
 	</section>
 </div>
