--- a/app/views/pages/details.html.erb
+++ b/app/views/pages/details.html.erb
@@ -25,7 +25,7 @@
 		</div>
 		<div class="col-1-2">
 			<div class="gmap-overlay hidden-mobile" onClick="style.pointerEvents='none'"></div>
-			<iframe width="100%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBNhmf2ErY7r15K6WYQmgMNFhjQaLrwdiU&q=Edmonds+Park" allowfullscreen class="hidden-mobile"></iframe>
+			<iframe width="100%" height="300" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBNhmf2ErY7r15K6WYQmgMNFhjQaLrwdiU&q=Edmonds+Park+Christchurch+NZ" allowfullscreen class="hidden-mobile"></iframe>
 
 		</div>
 		<div class="col-full text-center">
